raffia/tests/error/scss/at-rule/extend/complex_selector.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but found `<ident>`
  ┌─ complex_selector.scss:2:13
  │
2 │   @extend a b;
  │             ^


